Add crispy form

--- a/accounts/templates/accounts/password_reset.html
+++ b/accounts/templates/accounts/password_reset.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load crispy_forms_tags %}
 {% block title %}
 Password: Reset
 {% endblock %}
@@ -8,7 +9,7 @@ Password: Reset
         and we’ll email instructions for setting a new one</p>
     <form method="post">
     {% csrf_token %}
-    {{ form.as_p }}
+    {{ form|crispy }}
     <input type="submit" value="Reset my password">
     </form>
     <a href="{% url 'homepage' %}">Homepage</a>
