--- a/accounts/templates/accounts/password_change.html
+++ b/accounts/templates/accounts/password_change.html
@@ -1,11 +1,12 @@
 {% extends 'base.html' %}
+{% load crispy_forms_tags %}
 {% block title %}
 Password: Change
 {% endblock %}
 {% block content %}
     <form method="post">
     {% csrf_token %}
-    {{ form.as_p }}
+    {{ form|crispy }}
     <input type="submit" value="Change my password">
     </form>
     <a href="{% url 'homepage' %}">Homepage</a>
