--- a/authorizations/templates/authorizations/authorization_create.html
+++ b/authorizations/templates/authorizations/authorization_create.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load crispy_forms_tags %}
 {% block title %}
 Create an account
 {% endblock %}
@@ -6,7 +7,7 @@ Create an account
     <h1>Registration</h1>
     <form method="post">
     {% csrf_token %}
-    {{ form.as_p }}
+    {{ form|crispy }}
     <input type="submit" value="Submit">
     </form>
     <a href="{% url 'homepage' %}">Homepage</a>
