--- a/authorizations/templates/authorizations/authorization_delete.html
+++ b/authorizations/templates/authorizations/authorization_delete.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load crispy_forms_tags %}
 {% block title %}
 Authorization: Delete
 {% endblock %}
@@ -9,7 +10,7 @@ Authorization: Delete
     {{ object.start_validity }} - {{ object.expiration_time }}</p>
     <form method="post">
         {% csrf_token %}
-        {{ form.as_p }}
+        {{ form.crispy }}
         <a href="{% url 'authorizations:authorization_list' %}">Go back</a>
         <input type="submit" value="Confirm">
     </form>
