--- a/accounts/templates/accounts/registration/logged_out.html
+++ b/accounts/templates/accounts/registration/logged_out.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
     <p>Logged out!</p>
+
     <a href="{% url 'accounts:login' %}">Click here to login again</a>
+    <a href="{% url 'homepage' %}">Homepage</a>
 {% endblock %}
