--- a/accounts/templates/accounts/registration/login.html
+++ b/accounts/templates/accounts/registration/login.html
@@ -1,21 +1,13 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
 {% block content %}
+
     <form method="post">
         {% csrf_token %}
-        <table>
-            <tr>
-                <td>{{ form.username.label_tag }}</td>
-                <td>{{ form.username }}</td>
-            </tr>
-            <tr>
-                <td>{{ form.password.label_tag }}</td>
-                <td>{{ form.password }}</td>
-            </tr>
-        </table>
-        <input type="submit" value="Sign in">
+        {{ form|crispy }}
+        <button type="submit">Sign in</button>
     </form>
-    <a href="{% url 'homepage' %}">Homepage</a>
-    <a href="{% url 'accounts:user-create' %}"}>Register now</a>
 
+    <a href="{% url 'homepage' %}">Homepage</a>
+    <a href="{% url 'accounts:user-create' %}">Register</a>
 {% endblock %}
