--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,8 @@
     <title> {% block  title %}
     {% endblock %}</title>
 </head>
+<header>{% block header %}
+{% endblock %}</header>
 <body>
     <section class="container-fluid h-100 pt-5">
     {% block content %}
