--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -2,6 +2,31 @@
 {% block title %}
 Homepage
 {% endblock %}
+
+{% block header %}
+    <h1>My site</h1>
+    {% if user.is_authenticated %}
+        <p>Hello {{ user.username }}</p>
+        <form action="{% url 'accounts:logout' %}">
+            <button type="submit">
+                Logout
+            </button>
+        </form>
+    {% else %}
+        <form action="{% url 'accounts:login' %}">
+            <button type="submit">
+                Login
+            </button>
+        </form>
+        <form action="{% url 'accounts:user-create' %}">
+            <button type="submit">
+                Register
+            </button>
+        </form>
+    {% endif %}
+    <hr>
+{% endblock %}
+
 {% block content %}
     <h1>This is the homepage</h1>
     <h3>How it works?</h3>
@@ -9,8 +34,5 @@ Homepage
     Web PKI includes everything needed to issue and verify certificates used for TLS on the web.
     Certificates bind a public cryptographic key to a domain name, similar to how a passport brings
         together a person's photo and name.</p>
-    <a href="{% url 'accounts:user-create' %}">Register</a>
-    <a href="{% url 'accounts:login' %}">Login</a>
-    <a href="{% url 'homepage' %}">Homepage</a>
 
 {% endblock %}
