--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -7,6 +7,11 @@ Homepage
     <h1>My site</h1>
     {% if user.is_authenticated %}
         <p>Hello {{ user.username }}</p>
+        <form action="{% url 'accounts:profile' %}">
+            <button type="submit">
+                Profile
+            </button>
+        </form>
         <form action="{% url 'accounts:logout' %}">
             <button type="submit">
                 Logout
