--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -16,7 +16,7 @@
     <h3>List authorization</h3>
 
     <div style="overflow-x: auto">
-        <table cellspacing="0" cellpadding="5" border="1" style="width:100%" id="myTable">
+        <table cellspacing="0" cellpadding="5" border="1" style="width:100%; margin: 15px 5px;" id="myTable">
             <thead>
             <tr>
                 <th>SERVER</th>
@@ -37,6 +37,8 @@
             </tbody>
         </table>
     </div>
+
+    <a href="{% url 'accounts:profile-statistics' %}">Statistics</a><br>
 
     <a href="{% url 'homepage' %}">Homepage</a>
     <a href="{% url 'authorizations:authorization_create' %}">Create an authorization</a>
