--- a/templates/admin/authorizations/authorizations/change_list.html
+++ b/templates/admin/authorizations/authorizations/change_list.html
@@ -31,7 +31,8 @@ document.addEventListener('DOMContentLoaded', () => {
       ],
     },
     options: {
-      responsive: true,
+        responsive: true,
+        maintainAspectRadio: false,
       scales: {
         xAxes: [
           {
