Fix bugs and update profile settings

--- a/accounts/templates/accounts/password_change_done.html
+++ b/accounts/templates/accounts/password_change_done.html
@@ -5,5 +5,6 @@ Password: Change done
 {% block content %}
     <h3>Password Change Successful</h3>
     <p>Your password was changed</p>
+    <a href="{% url 'accounts:profile' %}">Profile</a>
     <a href="{% url 'homepage' %}">Homepage</a>
 {% endblock %}
