--- a/accounts/templates/accounts/registration/login.html
+++ b/accounts/templates/accounts/registration/login.html
@@ -10,4 +10,5 @@
 
     <a href="{% url 'homepage' %}">Homepage</a>
     <a href="{% url 'accounts:user-create' %}">Register</a>
+    <a href="{% url 'accounts:password_reset' %}">Reset password</a>
 {% endblock %}
