--- a/accounts/templates/accounts/email_change.html
+++ b/accounts/templates/accounts/email_change.html
@@ -1,14 +1,14 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
 {% block title %}
-Password: Change
+    Email: Change
 {% endblock %}
 {% block content %}
-    <h2>Password change</h2>
+    <h2>Email change</h2>
     <form method="post">
-    {% csrf_token %}
-    {{ form|crispy }}
-    <input type="submit" value="Change my password">
+        {% csrf_token %}
+        {{ form|crispy }}
+        <input type="submit" value="Change my email">
     </form>
     <a href="{% url 'accounts:profile-settings' %}">Profile settings</a>
     <a href="{% url 'homepage' %}">Homepage</a>
