--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block head %}
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.25/css/jquery.dataTables.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.25/js/jquery.dataTables.min.js"></script>
     <script src="{% static 'js/sort.js' %}"></script>
@@ -14,9 +15,9 @@
 {% endblock %}
 {% block content %}
     <h3>List authorization</h3>
-
+    {% if object_list %}
     <div style="overflow-x: auto; margin: 25px 5px">
-        <table cellspacing="0" cellpadding="5" border="1" style="width:80%; margin: 15px 5px;" id="myTable">
+        <table cellspacing="0" cellpadding="5" border="1" style="width: 80%; margin: 15px 5px;" id="myTable">
             <thead>
             <tr>
                 <th>SERVER</th>
@@ -30,19 +31,23 @@
                 <tr>
                     <td style="text-align: center">{{ object.server }}</td>
                     <td style="text-align: center">{{ object.client }}</td>
-                    <td style="text-align: center">{{ object.start_validity }}</td>
-                    <td style="text-align: center">{{ object.expiration_time }}</td>
+                    <td style="text-align: center">{{ object.start_validity|date:'Y-m-d H:i' }}</td>
+                    <td style="text-align: center">{{ object.expiration_time|date:'Y-m-d H:i' }}</td>
                 </tr>
             {% endfor %}
             </tbody>
         </table>
     </div>
+    {% else %}
+        <p>No authorization released</p>
+    {% endif %}
 
     <a href="{% url 'accounts:profile-statistics' %}">Statistics</a>
     <a href="{% url 'accounts:profile-settings' %}">Settings</a><br>
 
     <a href="{% url 'authorizations:authorization_create' %}">Create an authorization</a>
-    <a href="{% url 'accounts:profile-select' %}">Delete an authorization</a><br>
+    <a href="{% url 'accounts:profile-select-delete' %}">Delete an authorization</a>
+    <a href="{% url 'accounts:profile-select-update' %}">Update an authorization</a><br>
     <a href="{% url 'homepage' %}">Homepage</a>
 
 {% endblock %}
