--- a/accounts/templates/accounts/profile_statistics.html
+++ b/accounts/templates/accounts/profile_statistics.html
@@ -20,7 +20,7 @@
                 data: {
                     datasets: [
                         {
-                            label: 'new authorizations',
+                            label: 'new authorizations released',
                             data: chartData,
                             /*backgroundColor: 'rgba(220,20,20,0.5)',*/
                             backgroundColor: 'rgb(54, 162, 235)',
@@ -57,8 +57,11 @@
         });
     </script>
 {% endblock %}
-{% block content %}
+{% block header %}
     <h2>Statistics: {{ user.username }} </h2>
+    <hr>
+{% endblock %}
+{% block content %}
     <!-- Render our chart -->
     <div style="width: 80%;">
         <canvas style="margin-bottom: 30px; width: 60%; height: 50%;" id="myChart"></canvas>
