--- a/templates/admin/authorizations/authorizations/change_list.html
+++ b/templates/admin/authorizations/authorizations/change_list.html
@@ -58,7 +58,7 @@ document.addEventListener('DOMContentLoaded', () => {
   });
 });
 
-const btn = document.querySelector('#reload');
+/*const btn = document.querySelector('#reload');
   btn.addEventListener('click', async() => {
     const res = await fetch("/admin/authorizations/authorizations/chart_data/");
     const json = await res.json();
@@ -68,6 +68,7 @@ const btn = document.querySelector('#reload');
     chart.data.datasets[0].data = json;
     chart.update();
   });
+ */
 </script>
 {% endblock %}
 
@@ -76,7 +77,7 @@ const btn = document.querySelector('#reload');
     <div style="width: 80%;">
         <canvas style="margin-bottom: 30px; width: 60%; height: 50%;" id="myChart"></canvas>
     </div>
-    <button id="reload" style="margin: 1rem 0">Reload chart data</button>
+    <!-- <button id="reload" style="margin: 1rem 0">Reload chart data</button> -->
     <div style="width: 80%;">
         Authorizations currently active: {{ expiration_data }}
     </div>
