--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -37,15 +37,24 @@ Homepage
 {% endblock %}
 
 {% block content %}
-    <h1>This is the homepage</h1>
+
     <div style="width: 90%">
-    <h3>What is authorization transparency?</h3>
-    <p>The purpose of this project is to create an ecosystem that makes the issuance of access permission
-        to servers transparent and verifiable. You can verify the activity of the Authorization Servers by checking
-        the authorization they issue. In this way is easier to find the Authorization Servers that acts
-        maliciously or that mistakenly issued permission.</p>
-    <h3>How it works?</h3>
-    <p>Authorizations released are log in a Verifiable Data Structure, a Merkle Tree. The log in the Merkle Tree
-        are append-only.</p>
+        <h3>Introduction</h3>
+        <p>Much of life relies on trust in various authorities. In the internet realm, site owners trust Certificate
+            Authorities to issue certificates, mail clients may trust a key server to return the right public key
+            for a recipient they wish to mail to, server administrators trust their package distributors to send them
+            binaries for their software. In the real world, citizens trust land registries to accurately record who owns
+            which land.</p>
+        <h3>What is authorization transparency?</h3>
+        <p>The purpose of this project is to create an ecosystem that makes the issuance of access permission
+            to servers transparent and verifiable. You can verify the activity of the Authorization Servers by checking
+            the authorization they issue. In this way is easier to find the Authorization Servers that acts
+            maliciously or that mistakenly issued permission.</p>
+        <h3>How it works?</h3>
+        <p>Authorizations released are log in a Verifiable Data Structure, a Merkle Tree. The log in the Merkle Tree
+            are append-only. The Tree periodically published a signed tree head that is an hash that identifies the precise
+            content of the tree at that precise moment.
+        </p>
+        <!-- <img src="{% static "merkle_tree.png" %}" alt="merkle tree" style="width: 45%; height: 45%; float: right"> -->
     </div>
 {% endblock %}
